--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,16 @@ body {
 .btn-blue-deep:hover {
   background: rgba(0, 0, 0, 0.4);
 }
-/*skill part css*/
+/*reviews part css*/
+#reviews {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../images/./map2.png);
+}
+.owl-carousel .owl-item img {
+  width: none !important;
+}
 
 /* contact part css  */
 
