--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,16 @@ h6,
 p {
   margin: 0;
 }
+
 body {
   font-family: "Roboto", sans-serif;
 }
+
 /*header part css*/
 .navbg {
   box-shadow: rgba(67, 78, 94, 0.603) 0px 1px 5px 1px;
 }
+
 .navbar {
   padding-left: 15px;
   padding-right: 15px;
@@ -74,7 +77,7 @@ body {
   transition: all 0.4s ease-in-out;
 }
 
-.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active {
   color: #fff;
   font-weight: 600;
@@ -123,6 +126,7 @@ body {
 .about-img img {
   border-radius: 3px;
 }
+
 .about-text h4 {
   font-size: 20px;
   font-weight: 300;
@@ -165,10 +169,15 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .portfolio-text h3 {
   font-size: 28px;
   font-weight: 700;
   color: #434e5e;
+  padding-bottom: 20px;
+}
+
+.portfolio-text p {
   padding-bottom: 70px;
 }
 
@@ -200,6 +209,7 @@ body {
   font-weight: 300;
   color: #fff;
 }
+
 .btn-blue-deep {
   transition: all linear 0.2s;
   background: rgba(0, 0, 0, 0.2);
@@ -208,6 +218,7 @@ body {
 .btn-blue-deep:hover {
   background: rgba(0, 0, 0, 0.4);
 }
+
 /*reviews part css*/
 #reviews {
   background-size: contain;
@@ -215,6 +226,7 @@ body {
   background-repeat: no-repeat;
   background-image: url(../images/./map2.png);
 }
+
 .owl-carousel .owl-item img {
   width: none !important;
 }
@@ -224,15 +236,18 @@ body {
 #contact {
   padding: 48px 15px;
 }
+
 .input-form {
   height: 55px;
 }
+
 /* contact part css  */
 .contact-text i {
   width: 40px;
   height: 40px;
   font-size: 25px;
 }
+
 /* back to top css*/
 .back-top {
   position: fixed;
@@ -251,6 +266,7 @@ body {
   line-height: 40px;
   font-size: 20px;
 }
+
 #thank-you {
   height: 100vh;
   display: flex;
@@ -258,6 +274,7 @@ body {
   justify-content: center;
   background: linear-gradient(#41a4f5 50%, #007bff 100%, #007bff 30%);
 }
+
 .thank-you i {
   font-size: 120px;
 }
